--- a/colibre/auto_plotter/metallicity.yml
+++ b/colibre/auto_plotter/metallicity.yml
@@ -45,6 +45,8 @@ stellar_mass_gas_sf_metallicity_fromz_lom_30:
     - filename: GalaxyStellarMassGasMetallicity/Pharo2023_O3HB.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Pharo2023_O3O2.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Pharo2023_R23.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Henry2021.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Revalski2024.hdf5
 
 stellar_mass_gas_sf_metallicity_fromz_lom_50:
   type: "scatter"
@@ -93,6 +95,8 @@ stellar_mass_gas_sf_metallicity_fromz_lom_50:
     - filename: GalaxyStellarMassGasMetallicity/Pharo2023_O3HB.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Pharo2023_O3O2.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Pharo2023_R23.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Henry2021.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Revalski2024.hdf5
 
 stellar_mass_gas_sf_metallicity_lom_30:
   type: "scatter"
@@ -141,6 +145,8 @@ stellar_mass_gas_sf_metallicity_lom_30:
     - filename: GalaxyStellarMassGasMetallicity/Pharo2023_O3HB.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Pharo2023_O3O2.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Pharo2023_R23.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Henry2021.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Revalski2024.hdf5
 
 stellar_mass_gas_sf_metallicity_lom_50:
   type: "scatter"
@@ -189,6 +195,8 @@ stellar_mass_gas_sf_metallicity_lom_50:
     - filename: GalaxyStellarMassGasMetallicity/Pharo2023_O3HB.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Pharo2023_O3O2.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Pharo2023_R23.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Henry2021.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Revalski2024.hdf5
 
 stellar_mass_gas_sf_metallicity_total_lom_30:
   type: "scatter"
@@ -237,6 +245,8 @@ stellar_mass_gas_sf_metallicity_total_lom_30:
     - filename: GalaxyStellarMassGasMetallicity/Pharo2023_O3HB.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Pharo2023_O3O2.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Pharo2023_R23.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Henry2021.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Revalski2024.hdf5
 
 stellar_mass_gas_sf_metallicity_total_lom_50:
   type: "scatter"
@@ -285,6 +295,8 @@ stellar_mass_gas_sf_metallicity_total_lom_50:
     - filename: GalaxyStellarMassGasMetallicity/Pharo2023_O3HB.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Pharo2023_O3O2.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Pharo2023_R23.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Henry2021.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Revalski2024.hdf5
 
 stellar_mass_gas_sf_metallicity_mol_lowfloor_30:
   type: "scatter"
@@ -333,6 +345,8 @@ stellar_mass_gas_sf_metallicity_mol_lowfloor_30:
     - filename: GalaxyStellarMassGasMetallicity/Pharo2023_O3HB.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Pharo2023_O3O2.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Pharo2023_R23.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Henry2021.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Revalski2024.hdf5
 
 stellar_mass_gas_sf_metallicity_mol_lowfloor_50:
   type: "scatter"
@@ -381,6 +395,8 @@ stellar_mass_gas_sf_metallicity_mol_lowfloor_50:
     - filename: GalaxyStellarMassGasMetallicity/Pharo2023_O3HB.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Pharo2023_O3O2.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Pharo2023_R23.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Henry2021.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Revalski2024.hdf5
 
 stellar_mass_gas_sf_metallicity_mol_hifloor_30:
   type: "scatter"
@@ -429,6 +445,8 @@ stellar_mass_gas_sf_metallicity_mol_hifloor_30:
     - filename: GalaxyStellarMassGasMetallicity/Pharo2023_O3HB.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Pharo2023_O3O2.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Pharo2023_R23.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Henry2021.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Revalski2024.hdf5
 
 stellar_mass_gas_sf_metallicity_mol_hifloor_50:
   type: "scatter"
@@ -477,6 +495,8 @@ stellar_mass_gas_sf_metallicity_mol_hifloor_50:
     - filename: GalaxyStellarMassGasMetallicity/Pharo2023_O3HB.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Pharo2023_O3O2.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Pharo2023_R23.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Henry2021.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Revalski2024.hdf5
 
 stellar_mass_gas_sf_metallicity_lom_allgals_30:
   type: "scatter"
@@ -523,6 +543,8 @@ stellar_mass_gas_sf_metallicity_lom_allgals_30:
     - filename: GalaxyStellarMassGasMetallicity/Pharo2023_O3HB.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Pharo2023_O3O2.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Pharo2023_R23.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Henry2021.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Revalski2024.hdf5
 
 stellar_mass_gas_sf_metallicity_lom_allgals_50:
   type: "scatter"
@@ -569,6 +591,8 @@ stellar_mass_gas_sf_metallicity_lom_allgals_50:
     - filename: GalaxyStellarMassGasMetallicity/Pharo2023_O3HB.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Pharo2023_O3O2.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Pharo2023_R23.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Henry2021.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Revalski2024.hdf5
 
 
 stellar_mass_gas_nitrogen_over_total_oxygen_lom_50_kpc:
