--- a/colibre/config.yml
+++ b/colibre/config.yml
@@ -520,6 +520,96 @@ scripts:
       yvar: Mg_Fe
       dataset: APOGEE
   - filename: scripts/stellar_abundances.py
+    caption: '[Mg/H] vs [O/Mg] using Asplund et al. (2009) values for [O/H]Sun = 8.69 and [Mg/H]Sun = 7.6. The median [Mg/H] vs median [O/Mg] is indicated by the solid curve(s). The scatter points show abundances of individual stellar particles. The observational data for MW compiles the data from the APOGEE survey (Holtzman et al. 2018), which has been corrected by Sit et al. (2024). We also cross-match with the AstroNN added-value catalog (Leung, H.W. & Bovy, Jo 2019b) to create 6 stellar distributions by selecting stars from APOGEE based on galactocentric radial & azimuthal cuts, and combine them in order to derive a joint stellar abundance distribution that gives less weight to stars in the solar vicinity. The resulting contours use a log scale with 0.2 bin size. The arrows indicate the median value of [O/Mg] of gas with [Mg/H]<-4.'
+    output_file: stellar_abundances_MgH_OMg_2process_APOGEE_ASPCAP.png
+    section: Stellar Metal Abundances
+    title: '[Mg/H] vs [O/Mg]'
+    additional_arguments:
+      xvar: Mg_H
+      yvar: O_Mg
+      dataset: 2process_APOGEE_ASPCAP
+  - filename: scripts/stellar_abundances.py
+    caption: '[Fe/H] vs [Si/Fe] using Asplund et al. (2009) values for [Si/H]Sun = 7.51. The median [Fe/H] vs median [Si/Fe] is indicated by the solid curve(s). The scatter points show abundances of individual stellar particles. The observational data for MW compiles the data from the APOGEE survey (Holtzman et al. 2018), which has been corrected by Sit et al. (2024). We also cross-match with the AstroNN added-value catalog (Leung, H.W. & Bovy, Jo 2019b) to create 6 stellar distributions by selecting stars from APOGEE based on galactocentric radial & azimuthal cuts, and combine them in order to derive a joint stellar abundance distribution that gives less weight to stars in the solar vicinity. The resulting contours use a log scale with 0.2 bin size. The arrows indicate the median value of [Si/Fe] of gas with [Fe/H]<-4.'
+    output_file: stellar_abundances_FeH_SiFe_2process_APOGEE_ASPCAP.png
+    section: Stellar Metal Abundances
+    title: '[Fe/H] vs [Si/Fe]'
+    additional_arguments:
+      xvar: Fe_H
+      yvar: Si_Fe
+      dataset: 2process_APOGEE_ASPCAP
+  - filename: scripts/stellar_abundances.py
+    caption: '[Mg/H] vs [O/H] using Asplund et al. (2009) values for [O/H]Sun = 8.69 and [Mg/H]Sun = 7.6. The median [Mg/H] vs median [O/H] is indicated by the solid curve(s). The scatter points show abundances of individual stellar particles. The observational data for MW compiles the data from the APOGEE survey (Holtzman et al. 2018), which has been corrected by Sit et al. (2024). We also cross-match with the AstroNN added-value catalog (Leung, H.W. & Bovy, Jo 2019b) to create 6 stellar distributions by selecting stars from APOGEE based on galactocentric radial & azimuthal cuts, and combine them in order to derive a joint stellar abundance distribution that gives less weight to stars in the solar vicinity. The resulting contours use a log scale with 0.2 bin size. The arrows indicate the median value of [O/H] of gas with [Mg/H]<-4.'
+    output_file: stellar_abundances_MgH_OH_2process_APOGEE_ASPCAP.png
+    section: Stellar Metal Abundances
+    title: '[Mg/H] vs [O/H]'
+    additional_arguments:
+      xvar: Mg_H
+      yvar: O_H
+      dataset: 2process_APOGEE_ASPCAP
+  - filename: scripts/stellar_abundances.py
+    caption: '[Mg/H] vs [(C+N)/Mg] using Asplund et al. (2009) values for [Mg/H]Sun = 7.6. The median [Mg/H] vs median [(C+N)/Mg] is indicated by the solid curve(s). The scatter points show abundances of individual stellar particles. The observational data for MW compiles the data from the APOGEE survey (Holtzman et al. 2018), which has been corrected by Sit et al. (2024). We also cross-match with the AstroNN added-value catalog (Leung, H.W. & Bovy, Jo 2019b) to create 6 stellar distributions by selecting stars from APOGEE based on galactocentric radial & azimuthal cuts, and combine them in order to derive a joint stellar abundance distribution that gives less weight to stars in the solar vicinity. The resulting contours use a log scale with 0.2 bin size. The arrows indicate the median value of [(C+N)/Mg] of gas with [Mg/H]<-4.'
+    output_file: stellar_abundances_MgH_CNMg_2process_APOGEE_ASPCAP.png
+    section: Stellar Metal Abundances
+    title: '[Mg/H] vs [(C+N)/Mg]'
+    additional_arguments:
+      xvar: Mg_H
+      yvar: CN_Mg
+      dataset: 2process_APOGEE_ASPCAP
+  - filename: scripts/stellar_abundances.py
+    caption: '[O/H] vs [Mg/Fe] using Asplund et al. (2009) values for [Mg/H]Sun = 7.6. The median [O/H] vs median [Mg/Fe] is indicated by the solid curve(s). The scatter points show abundances of individual stellar particles. The observational data for MW compiles the data from the APOGEE survey (Holtzman et al. 2018), which has been corrected by Sit et al. (2024). We also cross-match with the AstroNN added-value catalog (Leung, H.W. & Bovy, Jo 2019b) to create 6 stellar distributions by selecting stars from APOGEE based on galactocentric radial & azimuthal cuts, and combine them in order to derive a joint stellar abundance distribution that gives less weight to stars in the solar vicinity. The resulting contours use a log scale with 0.2 bin size. The arrows indicate the median value of [Mg/Fe] of gas with [O/H]<-4.'
+    output_file: stellar_abundances_OH_MgFe_2process_APOGEE_ASPCAP.png
+    section: Stellar Metal Abundances
+    title: '[O/H] vs [Mg/Fe]'
+    additional_arguments:
+      xvar: O_H
+      yvar: Mg_Fe
+      dataset: 2process_APOGEE_ASPCAP
+  - filename: scripts/stellar_abundances.py
+    caption: '[Fe/H] vs [Mg/Fe] using Asplund et al. (2009) values for [Mg/H]Sun = 7.6. The median [Fe/H] vs median [Mg/Fe] is indicated by the solid curve(s). The scatter points show abundances of individual stellar particles. The observational data for MW compiles the data from the APOGEE survey (Holtzman et al. 2018), which has been corrected by Sit et al. (2024). We also cross-match with the AstroNN added-value catalog (Leung, H.W. & Bovy, Jo 2019b) to create 6 stellar distributions by selecting stars from APOGEE based on galactocentric radial & azimuthal cuts, and combine them in order to derive a joint stellar abundance distribution that gives less weight to stars in the solar vicinity. The resulting contours use a log scale with 0.2 bin size. The arrows indicate the median value of [Mg/Fe] of gas with [Fe/H]<-4.'
+    output_file: stellar_abundances_FeH_MgFe_2process_APOGEE_ASPCAP.png
+    section: Stellar Metal Abundances
+    title: '[Fe/H] vs [Mg/Fe]'
+    additional_arguments:
+      xvar: Fe_H
+      yvar: Mg_Fe
+      dataset: 2process_APOGEE_ASPCAP
+  - filename: scripts/stellar_abundances.py
+    caption: '[O/H] vs [Mg/Fe] using Asplund et al. (2009) values for [Mg/H]Sun = 7.6. The median [O/H] vs median [Mg/Fe] is indicated by the solid curve(s). The scatter points show abundances of individual stellar particles. The observational data for MW compiles the data from the APOGEE survey (Holtzman et al. 2018), which has been corrected by Sit et al. (2024). We also cross-match with the AstroNN added-value catalog (Leung, H.W. & Bovy, Jo 2019b) to create 6 stellar distributions by selecting stars from APOGEE based on galactocentric radial & azimuthal cuts, and combine them in order to derive a joint stellar abundance distribution that gives less weight to stars in the solar vicinity. The resulting contours use a log scale with 0.2 bin size. The arrows indicate the median value of [Mg/Fe] of gas with [O/H]<-4.'
+    output_file: stellar_abundances_OH_MgFe_2process_APOGEE_BAWLAS.png
+    section: Stellar Metal Abundances
+    title: '[O/H] vs [Mg/Fe]'
+    additional_arguments:
+      xvar: O_H
+      yvar: Mg_Fe
+      dataset: 2process_APOGEE_BAWLAS
+  - filename: scripts/stellar_abundances.py
+    caption: '[Mg/H] vs [O/Mg] using Asplund et al. (2009) values for [O/H]Sun = 8.69 and [Mg/H]Sun = 7.6. The median [Mg/H] vs median [O/Mg] is indicated by the solid curve(s). The scatter points show abundances of individual stellar particles. The observational data for MW compiles the data from the APOGEE survey (Holtzman et al. 2018), which has been corrected by Sit et al. (2024). We also cross-match with the AstroNN added-value catalog (Leung, H.W. & Bovy, Jo 2019b) to create 6 stellar distributions by selecting stars from APOGEE based on galactocentric radial & azimuthal cuts, and combine them in order to derive a joint stellar abundance distribution that gives less weight to stars in the solar vicinity. The resulting contours use a log scale with 0.2 bin size. The arrows indicate the median value of [O/Mg] of gas with [Mg/H]<-4.'
+    output_file: stellar_abundances_MgH_OMg_2process_APOGEE_BAWLAS.png
+    section: Stellar Metal Abundances
+    title: '[Mg/H] vs [O/Mg]'
+    additional_arguments:
+      xvar: Mg_H
+      yvar: O_Mg
+      dataset: 2process_APOGEE_BAWLAS
+  - filename: scripts/stellar_abundances.py
+    caption: '[Mg/H] vs [O/H] using Asplund et al. (2009) values for [O/H]Sun = 8.69 and [Mg/H]Sun = 7.6. The median [Mg/H] vs median [O/H] is indicated by the solid curve(s). The scatter points show abundances of individual stellar particles. The observational data for MW compiles the data from the APOGEE survey (Holtzman et al. 2018), which has been corrected by Sit et al. (2024). We also cross-match with the AstroNN added-value catalog (Leung, H.W. & Bovy, Jo 2019b) to create 6 stellar distributions by selecting stars from APOGEE based on galactocentric radial & azimuthal cuts, and combine them in order to derive a joint stellar abundance distribution that gives less weight to stars in the solar vicinity. The resulting contours use a log scale with 0.2 bin size. The arrows indicate the median value of [O/H] of gas with [Mg/H]<-4.'
+    output_file: stellar_abundances_MgH_OH_2process_APOGEE_BAWLAS.png
+    section: Stellar Metal Abundances
+    title: '[Mg/H] vs [O/H]'
+    additional_arguments:
+      xvar: Mg_H
+      yvar: O_H
+      dataset: 2process_APOGEE_BAWLAS
+  - filename: scripts/stellar_abundances.py
+    caption: '[Mg/H] vs [(C+N)/Mg] using Asplund et al. (2009) values for [Mg/H]Sun = 7.6. The median [Mg/H] vs median [(C+N)/Mg] is indicated by the solid curve(s). The scatter points show abundances of individual stellar particles. The observational data for MW compiles the data from the APOGEE survey (Holtzman et al. 2018), which has been corrected by Sit et al. (2024). We also cross-match with the AstroNN added-value catalog (Leung, H.W. & Bovy, Jo 2019b) to create 6 stellar distributions by selecting stars from APOGEE based on galactocentric radial & azimuthal cuts, and combine them in order to derive a joint stellar abundance distribution that gives less weight to stars in the solar vicinity. The resulting contours use a log scale with 0.2 bin size. The arrows indicate the median value of [(C+N)/Mg] of gas with [Mg/H]<-4.'
+    output_file: stellar_abundances_MgH_CNMg_2process_APOGEE_BAWLAS.png
+    section: Stellar Metal Abundances
+    title: '[Mg/H] vs [(C+N)/Mg]'
+    additional_arguments:
+      xvar: Mg_H
+      yvar: CN_Mg
+      dataset: 2process_APOGEE_BAWLAS
+  - filename: scripts/stellar_abundances.py
     caption: 'The mass fraction of Fe from SNIa vs [Fe/H] using Asplund et al. (2009) values for [Fe/H]Sun = 7.5. The median SNIa Fe fraction vs median [Fe/H] is indicated by the solid curve(s). The scatter points show abundances of individual stellar particles.'
     output_file: stellar_abundances_FeH_Fe_snia_fraction.png
     section: Stellar Metal Abundances
