--- a/colibre/auto_plotter/ages.yml
+++ b/colibre/auto_plotter/ages.yml
@@ -60,3 +60,67 @@ stellar_mass_ages_50:
     caption: Median age of stars within the 50 kpc 3D aperture of each galaxy.
   observational_data:
     - filename: GalaxyStellarMassStellarAges/Gallazzi2005_Data.hdf5
+
+stellar_mass_ages_centrals_50:
+  type: "scatter"
+  legend_loc: "lower right"
+  select_structure_type: 1
+  y:
+    quantity: "stellar_age.tage_star"
+    units: yr
+    start: 1e8
+    end: 3e10
+  x:
+    quantity: "apertures.mass_star_50_kpc"
+    units: solar_mass
+    start: 1e7
+    end: 1e12
+  median:
+    plot: true
+    log: true
+    number_of_bins: 25
+    adaptive: true
+    start:
+      value: 1e7
+      units: solar_mass
+    end:
+      value: 1e12
+      units: solar_mass
+  metadata:
+    title: "Stellar mass - Stellar age relation (50 kpc aperture, centrals only)"
+    section: Ages
+    caption: Median age of stars within the 50 kpc 3D aperture of each galaxy, showing central galaxies only.
+  observational_data:
+    - filename: GalaxyStellarMassStellarAges/Gallazzi2005_Data.hdf5
+
+stellar_mass_ages_satellites_50:
+  type: "scatter"
+  legend_loc: "lower right"
+  select_structure_type: 0
+  y:
+    quantity: "stellar_age.tage_star"
+    units: yr
+    start: 1e8
+    end: 3e10
+  x:
+    quantity: "apertures.mass_star_50_kpc"
+    units: solar_mass
+    start: 1e7
+    end: 1e12
+  median:
+    plot: true
+    log: true
+    number_of_bins: 25
+    adaptive: true
+    start:
+      value: 1e7
+      units: solar_mass
+    end:
+      value: 1e12
+      units: solar_mass
+  metadata:
+    title: "Stellar mass - Stellar age relation (50 kpc aperture, satellites only)"
+    section: Ages
+    caption: Median age of stars within the 50 kpc 3D aperture of each galaxy, showing satellite galaxies only.
+  observational_data:
+    - filename: GalaxyStellarMassStellarAges/Gallazzi2005_Data.hdf5
